--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                     البرامج
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#"> برنامج المحاسبة</a></li>
-                    <li><a class="dropdown-item" href="#">  برنامج ادارة المخازن </a></li>
-                    <li><a class="dropdown-item" href="#">  برنامج ادارة المناديب  </a></li>
-                    <li><a class="dropdown-item" href="#">  برنامج ادارة الموارد البشرية  </a></li>
-                    <li><a class="dropdown-item" href="#">  برنامج   نقاط البيعpos  </a></li>
+                    <li><a class="dropdown-item" href="Programs-Accounting.html"> برنامج المحاسبة</a></li>
+                    <li><a class="dropdown-item" href="Programs-stores.html">  برنامج ادارة المخازن </a></li>
+                    <li><a class="dropdown-item" href="Programs-delegates.html">  برنامج ادارة المناديب  </a></li>
+                    <li><a class="dropdown-item" href="Programs-Personnel.html">  برنامج ادارة الموارد البشرية  </a></li>
+                    <li><a class="dropdown-item" href="Programs-pos.html">  برنامج   نقاط البيعpos  </a></li>
                     <li><a class="dropdown-item" href="#">     برامج اخرى  </a></li>
-
+  
                   </ul>
                 </li>
                 <li class="nav-item">
