--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">تاهيل المحطات</a></li>
-                    <li><a class="dropdown-item" href="#">تصميم المواقع الاكترونية </a></li>
-                    <li><a class="dropdown-item" href="#">تصميم تطبيقات الجوال  </a></li>
+                    <li><a class="dropdown-item" href="services-web.html">تصميم المواقع الاكترونية </a></li>
+                  <li><a class="dropdown-item" href="services-mobile.html">تصميم تطبيقات الجوال  </a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
