--- a/services-mobile.html
+++ b/services-mobile.html
@@ -313,7 +313,7 @@
             
           </div>
           <div class="col">
-            <img class="w-100 img-system" src="./assets/img/web.png" alt="management">
+            <img class="w-100 img-system" src="./assets/img/mob-invo.png" alt="management">
           </div>
           
         </div>
