--- a/services-web.html
+++ b/services-web.html
@@ -317,7 +317,7 @@
             
           </div>
           <div class="col">
-            <img class="w-100 img-system" src="./assets/img/web.png" alt="management">
+            <img class="w-100 img-system" src="./assets/img/web-invo.png" alt="management">
           </div>
           
         </div>
