--- a/Blog.html
+++ b/Blog.html
@@ -52,7 +52,7 @@
                 الخدمات
               </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">تاهيل المحطات</a></li>
+                  <li><a class="dropdown-item" href="services-Fuel.html">تاهيل المحطات</a></li>
                   <li><a class="dropdown-item" href="services-web.html">تصميم المواقع الاكترونية </a></li>
                   <li><a class="dropdown-item" href="services-mobile.html">تصميم تطبيقات الجوال  </a></li>
                 </ul>
@@ -184,7 +184,7 @@
                       <div class="card card-blog">
                           <a href="blog-defintion.html">
                                 <div class="img-blog-date">
-                                    <img class="blog-img" src="./assets/img/Blog-design.webp" alt="Blog">
+                                    <img class="blog-img" src="./assets/img/bolog3.webp" alt="Blog">
                                     <div class="date-time">
                                           <div class="number-time">25</div>
                                           <div>Sep</div>
@@ -234,7 +234,7 @@
             </p>
             </div>
             <div class="col text-start col-button-con">
-             <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
+             <a href="contact.html" class="p-2 px-4 button-wiet">  تواصل معنا</a>
             </div>
          </div>
          <div class="shape-tri">
