--- a/Programs-Other.html
+++ b/Programs-Other.html
@@ -52,7 +52,7 @@
                 الخدمات
               </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">تاهيل المحطات</a></li>
+                  <li><a class="dropdown-item" href="services-Fuel.html">تاهيل المحطات</a></li>
                   <li><a class="dropdown-item" href="services-web.html">تصميم المواقع الاكترونية </a></li>
                   <li><a class="dropdown-item" href="services-mobile.html">تصميم تطبيقات الجوال  </a></li>
                 </ul>
@@ -176,7 +176,7 @@
               </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -251,7 +251,7 @@
               </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -328,7 +328,7 @@
               </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -390,7 +390,7 @@
             
           </div>
           <div class="col">
-            <img class="sales-img img-one animate-float-y" src="./assets/img/HR.webp" alt="sales">
+            <img class="sales-img img-one animate-float-y" src="./assets/img/secol.webp" alt="sales">
           </div>
          </div>
       </div>
@@ -412,7 +412,7 @@
               </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -733,7 +733,7 @@
             </p>
             </div>
             <div class="col text-start col-button-con">
-             <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
+             <a href="contact.html" class="p-2 px-4 button-wiet">  تواصل معنا</a>
             </div>
          </div>
          <div class="shape-tri">
