--- a/Programs.html
+++ b/Programs.html
@@ -52,7 +52,7 @@
                 الخدمات
               </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">تاهيل المحطات</a></li>
+                  <li><a class="dropdown-item" href="services-Fuel.html">تاهيل المحطات</a></li>
                   <li><a class="dropdown-item" href="services-web.html">تصميم المواقع الاكترونية </a></li>
                   <li><a class="dropdown-item" href="services-mobile.html">تصميم تطبيقات الجوال  </a></li>
                 </ul>
@@ -125,7 +125,7 @@
                </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -248,7 +248,7 @@
 
             </div>
             <div class="mt-4">
-              <a href="#" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
+              <a href="Programs-Accounting.html" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
 
             </div>
           </div>
@@ -273,7 +273,7 @@
                </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -321,7 +321,7 @@
 
             </div>
             <div class="mt-4">
-              <a href="#" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
+              <a href="Programs-stores.html" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
 
             </div>
           </div>
@@ -347,7 +347,7 @@
               </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -400,7 +400,7 @@
 
             </div>
             <div class="mt-4">
-              <a href="#" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
+              <a href="Programs-delegates.html" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
 
             </div>
           </div>
@@ -425,7 +425,7 @@
               </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -481,7 +481,7 @@
 
             </div>
             <div class="mt-4">
-              <a href="#" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
+              <a href="Programs-Personnel.html" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
 
             </div>
           </div>
@@ -507,7 +507,7 @@
               </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -567,7 +567,7 @@
 
             </div>
             <div class="mt-4">
-              <a href="#" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
+              <a href="Programs-pos.html" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
 
             </div>
           </div>
@@ -594,7 +594,7 @@
               </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">  ابدأ الاستخدام الآن</a>
               </div>
            </div>
         </div>
@@ -642,7 +642,7 @@
 
           </div>
           <div class="mt-4">
-            <a href="#" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
+            <a href="Programs-Other.html" class="p-2 px-4 button-stert button-mor">  قراءة المزيد</a>
 
           </div>
         </div>
@@ -889,7 +889,7 @@
             </p>
             </div>
             <div class="col text-start col-button-con">
-             <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
+             <a href="contact.html" class="p-2 px-4 button-wiet">  تواصل معنا</a>
             </div>
          </div>
          <div class="shape-tri">
