--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   الخدمات
                 </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">تاهيل المحطات</a></li>
+                    <li><a class="dropdown-item" href="services-Fuel.html">تاهيل المحطات</a></li>
                     <li><a class="dropdown-item" href="services-web.html">تصميم المواقع الاكترونية </a></li>
                   <li><a class="dropdown-item" href="services-mobile.html">تصميم تطبيقات الجوال  </a></li>
                   </ul>
@@ -122,7 +122,7 @@
                 <p class="pt-5">برنامج رايتو ERP هو الحل الأمثل الذي يلبي احتياجات إدارة أعمالك، تم تطويره باستخدام أحدث التقنيات المتقدمة لضمان السرعة والدقة والأمان، فريق دعم البرنامج يؤمن بمبدأ التطور المستمر كمفتاح للنجاح منذ بداية تأسيسه!
                </p>
                <div class="mt-5">
-                <a href="#" class="p-3 px-4 button-stert button-mor">ابدا الاستخدام مجانى</a>
+                <a href="contact.html" class="p-3 px-4 button-stert button-mor">ابدا الاستخدام الان</a>
 
                </div>
               </div>
@@ -185,7 +185,7 @@
                     <p class="card-text">نقدم لكم برامج المحاسبة لكافة المنشأت، ويتم من خلال هذه البرامج إدارة المدفوعات - القيـود اليوميـة - الايداعات - التحويلات البنكية بيـن الحسابات- تسوية الحسابات البنكية الشــركات وغيرها.
                     </p>
                     <div>
-                      <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                      <a href="Programs-Accounting.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
                     </div>
                   </div>
@@ -202,7 +202,7 @@
 
                    </p>
                    <div>
-                    <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                    <a href="Programs-stores.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
                   </div>
                  </div>
@@ -218,7 +218,7 @@
                   نؤسس لك برنامج يساعدك على على إدارة وتتبع مبيعاتك عبر المندوبين في منشأتك بكل سهولة وذلك من خلال توفير ميزة تسجيل فواتير المبيعات والمردودات مع تطبيق كل سياسات المنشأة الخاصة بالعملاء والأسعار عند إصدار الفاتورة.
                  </p>
                  <div>
-                  <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                  <a href="Programs-delegates.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
                 </div>
                </div>
@@ -231,14 +231,14 @@
            <!---->
            <div class="col d-flex">
             <div class="card"data-aos-delay="30"data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/HR.webp"alt="Services">
+               <img class="img-fluid" src="./assets/img/hre.webp"alt="Services">
                <div class="card-body">
                  <h3 class="card-title">        إدارة الموارد البشرية </h3>
                  <p class="card-text">  
                   ننشئ لك برنامج يساعد في إدارة جميع بيانات الموظفين بكفاءة في ملف تعريف واحد، بالإضافة إلى تنظيم دورة العهدة من البداية إلى النهاية، ويساعدك البرنامج في إعداد استراتيجية المكافآت والعقوبات، ومتابعة تدفقات عمل الموارد البشرية.
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                    <a href="Programs-Personnel.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
                   </div>
                </div>
@@ -254,7 +254,7 @@
                   نقدم برنامج نقط البيع POS الذي يعزز الأنشطة التجارية ويساهم في زيادة الأرباح، ويعتبر هذا البرنامج نظام مبيعات متكامل يوفر حلولاً شاملة لتسهيل عملية البيع وجميع الجوانب المرتبطة بها
                 </p>
                 <div>
-                  <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                  <a href="Programs-pos.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
                 </div>
                </div>
@@ -271,7 +271,7 @@
 
                 </p>
                 <div>
-                  <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                  <a href="Programs-Other.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
                 </div>
                </div>
@@ -296,7 +296,7 @@
                </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-3 px-4 button-stert">ابدا الاستخدام مجانى</a>
+               <a href="contact.html" class="p-3 px-4 button-stert">ابدا الاستخدام الان</a>
               </div>
            </div>
         </div>
@@ -394,7 +394,7 @@
                  </p>
                 </div>
                 <div class="col text-start mt-md-0 mt-5">
-                 <a href="#" class="p-3 px-4 button-stert">ابدا الاستخدام مجانى</a>
+                 <a href="contact.html" class="p-3 px-4 button-stert">ابدا الاستخدام الان</a>
                 </div>
              </div>
           </div>
@@ -423,7 +423,7 @@
                     نساعدك في تصميم موقع إلكتروني سريع وآمن ومتوافق مع قواعد السيو، سهل الاستخدام، سهل التنقل ذو محتوى مفيد وجذاب.
                    </p>
                    <div>
-                    <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                    <a href="services-web.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
                   </div>
                  </div>
@@ -441,7 +441,7 @@
                 
                 </p>
                 <div>
-                  <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                  <a href="services-mobile.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
                 </div>
                </div>
@@ -759,7 +759,7 @@
             </div>
           </div>
           <div class="col">
-            <img class="sales-img img-one animate-float-y" src="./assets/img/seles.png" alt="sales">
+            <img class="sales-img img-one animate-float-y" src="./assets/img/sels-sels.webp" alt="sales">
           </div>
          </div>
       </div>
