--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 الخدمات
               </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">تاهيل المحطات</a></li>
+                  <li><a class="dropdown-item" href="services-Fuel.html">تاهيل المحطات</a></li>
                   <li><a class="dropdown-item" href="services-web.html">تصميم المواقع الاكترونية </a></li>
                   <li><a class="dropdown-item" href="services-mobile.html">تصميم تطبيقات الجوال  </a></li>
                 </ul>
@@ -263,7 +263,7 @@
                </p>
               </div>
               <div class="col text-start mt-md-0 mt-5">
-               <a href="#" class="p-2 px-4 button-stert">ابدا الاستخدام مجانى</a>
+               <a href="contact.html" class="p-2 px-4 button-stert">ابدا الاستخدام الان</a>
               </div>
            </div>
         </div>
@@ -499,7 +499,7 @@
             </p>
             </div>
             <div class="col text-start col-button-con">
-             <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
+             <a href="contact.html" class="p-2 px-4 button-wiet">  تواصل معنا</a>
             </div>
          </div>
          <div class="shape-tri">
