--- a/blog-defintion.html
+++ b/blog-defintion.html
@@ -52,7 +52,7 @@
                 الخدمات
               </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">تاهيل المحطات</a></li>
+                  <li><a class="dropdown-item" href="services-Fuel.html">تاهيل المحطات</a></li>
                   <li><a class="dropdown-item" href="services-web.html">تصميم المواقع الاكترونية </a></li>
                   <li><a class="dropdown-item" href="services-mobile.html">تصميم تطبيقات الجوال  </a></li>
                 </ul>
@@ -188,7 +188,7 @@
                                       
                                       </div>
                                       <div class="col text-start">
-                                       <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
+                                       <a href="contact.html" class="p-2 px-4 button-wiet">  تواصل معنا</a>
                                       </div>
                                    </div>
                                   
@@ -237,7 +237,7 @@
             </p>
             </div>
             <div class="col text-start col-button-con">
-             <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
+             <a href="contact.html" class="p-2 px-4 button-wiet">  تواصل معنا</a>
             </div>
          </div>
          <div class="shape-tri">
