--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 الخدمات
               </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">تاهيل المحطات</a></li>
+                  <li><a class="dropdown-item" href="services-Fuel.html">تاهيل المحطات</a></li>
                   <li><a class="dropdown-item" href="services-web.html">تصميم المواقع الاكترونية </a></li>
                   <li><a class="dropdown-item" href="services-mobile.html">تصميم تطبيقات الجوال  </a></li>
                 </ul>
@@ -187,7 +187,7 @@
             </p>
             </div>
             <div class="col text-start col-button-con">
-             <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
+             <a href="contact.html" class="p-2 px-4 button-wiet">  تواصل معنا</a>
             </div>
          </div>
          <div class="shape-tri">
