--- a/Services.html
+++ b/Services.html
@@ -144,7 +144,7 @@
                   نقدم خدمات تصميم وتطوير المواقع الإلكترونية الاحترافية والجذابة، سواء كنت تحتاج إلى موقع استاتيكي بسيط أو متجر إلكتروني معقد، فإن فريقنا المحترف سيساعدك، ونولي اهتمامًا كبيرًا لتحقيق توافق الموقع مع مختلف الأجهزة وتجربة المستخدم السلسة.
                 </p>
                  <div>
-                  <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                  <a href="services-web.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
                 </div>
                </div>
@@ -162,7 +162,7 @@
               
               </p>
               <div>
-                <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                <a href="services-mobile.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
               </div>
              </div>
@@ -179,7 +179,7 @@
               
                </p>
                <div>
-                <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                <a href="services-Fuel.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
               </div>
              </div>
@@ -419,7 +419,7 @@
             </p>
             </div>
             <div class="col text-start col-button-con">
-             <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
+             <a href="contact.html" class="p-2 px-4 button-wiet">  تواصل معنا</a>
             </div>
          </div>
          <div class="shape-tri">
