--- a/Our-business.html
+++ b/Our-business.html
@@ -115,58 +115,58 @@
             <h3 class="title-title text-end">تأهيل المحطات</h3>
             <div class="row mx-0 row-cols-lg-4 row-cols-md-2 row-cols-1 g-4 pt-4 pb-4">
               <div class="col">
-                <img class="img-or"src="./assets/img/stations.webp" alt="ststions">
+                <img class="img-or"src="./assets/img/setion-our.webp" alt="ststions">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/stations.webp" alt="ststions">
+                <img class="img-or"src="./assets/img/setion-our2.webp" alt="ststions">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/stations.webp" alt="ststions">
+                <img class="img-or"src="./assets/img/setion-our3.webp" alt="ststions">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/stations.webp" alt="ststions">
+                <img class="img-or"src="./assets/img/setion-our4.webp" alt="ststions">
               </div>
             </div>
             <h3 class="title-title text-end"> تصميم المواقع الإلكترونية
             </h3>
             <div class="row mx-0 row-cols-lg-4 row-cols-md-2 row-cols-1 g-4 pt-4 pb-4">
               <div class="col">
-                <img class="img-or"src="./assets/img/bolog4.webp" alt="web">
+                <img class="img-or"src="./assets/img/web-our1.webp" alt="web">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/bolog4.webp" alt="web">
+                <img class="img-or"src="./assets/img/web-our2.webp" alt="web">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/bolog4.webp" alt="web">
+                <img class="img-or"src="./assets/img/web-our3.webp" alt="web">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/bolog4.webp" alt="web">
+                <img class="img-or"src="./assets/img/web-our4.webp" alt="web">
               </div>
             </div>
             <h3 class="title-title text-end"> تصميم تطبيقات الجوال
             </h3>
             <div class="row mx-0 row-cols-lg-4 row-cols-md-2 row-cols-1 g-4 pt-4 pb-4">
               <div class="col">
-                <img class="img-or"src="./assets/img/wep-mopile.webp" alt="web">
+                <img class="img-or"src="./assets/img/mobile-our.webp" alt="web">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/wep-mopile.webp" alt="web">
+                <img class="img-or"src="./assets/img/mobile-our2.webp" alt="web">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/wep-mopile.webp" alt="web">
+                <img class="img-or"src="./assets/img/mobile-our3.webp" alt="web">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/wep-mopile.webp" alt="web">
+                <img class="img-or"src="./assets/img/mobile-our4.webp" alt="web">
               </div>
             </div>
             <h3 class="title-title text-end">   إعداد البرامج المحاسبية
             </h3>
             <div class="row mx-0 row-cols-lg-4 row-cols-md-2 row-cols-1 g-4 pt-4 pb-4">
               <div class="col">
-                <img class="img-or"src="./assets/img/management system.webp" alt="management">
+                <img class="img-or"src="./assets/img/pagreem-our2.webp" alt="management">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/management system.webp" alt="management">
+                <img class="img-or"src="./assets/img/pagrem-our.webp" alt="management">
               </div>
               <div class="col">
                 <img class="img-or"src="./assets/img/management system.webp" alt="management">
