--- a/Our-business.html
+++ b/Our-business.html
@@ -169,10 +169,10 @@
                 <img class="img-or"src="./assets/img/pagrem-our.webp" alt="management">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/management system.webp" alt="management">
+                <img class="img-or"src="./assets/img/pagrem-our3.webp" alt="management">
               </div>
               <div class="col">
-                <img class="img-or"src="./assets/img/management system.webp" alt="management">
+                <img class="img-or"src="./assets/img/pagrem-our4.webp" alt="management">
               </div>
             </div>
           </div>
