--- a/Programs-Personnel.html
+++ b/Programs-Personnel.html
@@ -662,7 +662,7 @@
             <div class="col-lg-4 ">
               <div class="aos-init aos-animate"data-aos="fade-up" data-aos-delay="30">
                 <div class="logo-footer">
-                  <a href="#">
+                  <a href="index.html">
                     <img class="img-footer-logo" src="./assets/img/logoar.webp"alt="logo">
                   </a>
                 </div>
@@ -674,10 +674,10 @@
 
                 </p>
                 <div class="a-google">
-                  <a href="">
+                  <a href="https://apps.apple.com/us/developer/raitotec/id1545363149">
                     <img src="./assets/img/app_store.svg" alt="app">
                   </a>
-                  <a href="">
+                  <a href="https://play.google.com/store/apps/developer?id=Raitotec&hl=ar&gl=US">
                     <img src="./assets/img/google_play.svg" alt="google">
                   </a>
                 </div>
@@ -705,16 +705,16 @@
                 <h4 class="title-footer">تواصل معنا</h4>
                 <div class="pt-4">
                   <div class="contact-content mb-2">
-                    <a class="content-box">
+                    <a class="content-box" href="https://maps.app.goo.gl/YTLGN9WXiyjrZhZK9">
                         <i class="fa fa-location-dot"></i>
                         الرياض ، المملكة العربية السعودية ، 4000
                         طريق دائري 12993 ، 27              
                     </a>
                   </div>
                   <div class="contact-content mb-2">
-                    <a href="tel:++966538499438" class="content-box">
+                    <a href="tel:+966538499438" class="content-box">
                         <i class="fa fa-phone"></i>
-                        <span>+966538499438</span>
+                        <span>966538499438+</span>
                     </a>
                   </div>
                   <div class="contact-content mb-2">
