--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               
               <div class="carousel-caption  d-md-block">
                 <h5>رايتو</h5>
-                <p class="pt-5">للبرمجيات وتخطيط الموارد</p>
+                <p class="pt-md-5 pt-1">للبرمجيات وتخطيط الموارد</p>
               </div>
             </div>
             <div class="carousel-item">
@@ -119,9 +119,9 @@
                
               <div class="carousel-caption d- d-md-block">
                 <h5>نظام ERP متطور ومتكامل</h5>
-                <p class="pt-5">برنامج رايتو ERP هو الحل الأمثل الذي يلبي احتياجات إدارة أعمالك، تم تطويره باستخدام أحدث التقنيات المتقدمة لضمان السرعة والدقة والأمان، فريق دعم البرنامج يؤمن بمبدأ التطور المستمر كمفتاح للنجاح منذ بداية تأسيسه!
+                <p class="pt-md-5 pt-1">برنامج رايتو ERP هو الحل الأمثل الذي يلبي احتياجات إدارة أعمالك، تم تطويره باستخدام أحدث التقنيات المتقدمة لضمان السرعة والدقة والأمان، فريق دعم البرنامج يؤمن بمبدأ التطور المستمر كمفتاح للنجاح منذ بداية تأسيسه!
                </p>
-               <div class="mt-5">
+               <div class="mt-md-5 mt-1">
                 <a href="contact.html" class="p-3 px-4 button-stert button-mor">ابدا الاستخدام الان</a>
 
                </div>
@@ -858,7 +858,7 @@
               <div class="col-lg-4 ">
                 <div class="aos-init aos-animate"data-aos="fade-up" data-aos-delay="30">
                   <div class="logo-footer">
-                    <a href="#">
+                    <a href="index.html">
                       <img class="img-footer-logo" src="./assets/img/logoar.webp"alt="logo">
                     </a>
                   </div>
@@ -870,10 +870,10 @@
   
                   </p>
                   <div class="a-google">
-                    <a href="">
+                    <a href="https://apps.apple.com/us/developer/raitotec/id1545363149">
                       <img src="./assets/img/app_store.svg" alt="app">
                     </a>
-                    <a href="">
+                    <a href="https://play.google.com/store/apps/developer?id=Raitotec&hl=ar&gl=US">
                       <img src="./assets/img/google_play.svg" alt="google">
                     </a>
                   </div>
@@ -901,7 +901,7 @@
                   <h4 class="title-footer">تواصل معنا</h4>
                   <div class="pt-4">
                     <div class="contact-content mb-2">
-                      <a class="content-box">
+                      <a class="content-box" href="https://maps.app.goo.gl/YTLGN9WXiyjrZhZK9">
                           <i class="fa fa-location-dot"></i>
                           الرياض ، المملكة العربية السعودية ، 4000
                           طريق دائري 12993 ، 27              
