--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@
                     <h3 class="card-title">المحاسبة العامة </h3>
                     <p class="card-text">نقدم لكم برامج المحاسبة لكافة المنشأت، ويتم من خلال هذه البرامج إدارة المدفوعات - القيـود اليوميـة - الايداعات - التحويلات البنكية بيـن الحسابات- تسوية الحسابات البنكية الشــركات وغيرها.
                     </p>
+                   <p>
+
+                   </p>
+                   <p></p>
+                   <p></p>
                     <div>
                       <a href="Programs-Accounting.html" class="btn btn-primar px-3">قراءة المزيد </a>
 
@@ -1030,5 +1035,5 @@
      <script src="./assets/js/bootstrap.bundle.min.js"></script>
      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
      <script src="./assets/js/loade.js"></script>
-     
+     </body>
 </html>
