--- a/services-web.html
+++ b/services-web.html
@@ -97,7 +97,7 @@
           <h2 class="page-title pt-5">  
           تصميم مواقع الكترونية
           </h2>
-          <p class="pt-3 text-white fs-5 col-md-8">
+          <p class="pt-3 text-white fs-5">
             نصمم مواقع إلكترونية استثنائية تعكس هويتك، وتوفر تجربة متميزة للمستخدمين.
           </p>
       </div>
@@ -288,39 +288,18 @@
      <!---->
      <section class="mt-5 pt-5 pb-5">
       <div class="container">
-        <div class="row mx-0 row-cols-lg-2 row-cols-1 g-4 justify-content-center align-items-center">
-          <div class="col">
-            <h2 class="title-title">  
-              خطوات تصميم المواقع الإلكترونية من خلال رايتو
+        <!--18-12-->
+        <div class="row mx-0  justify-content-center align-items-center">
+          <h2 class="title-title text-center">  
+            خطوات تصميم المواقع الإلكترونية من خلال رايتو
 
-            </h2>
-            <ul class="pt-3 ">
-              <li class="pt-3 p-decerption">تحديد الأهداف</li>
-              <li class="pt-3 p-decerption">إعداد خريطة الموقع (Sitemap)</li>
-              <li class="pt-3 p-decerption">تصميم واجهة المستخدم (UI Design)</li>
-              <li class="pt-3 p-decerption">تصميم تجربة المستخدم (UX Design)</li>
-              <li class="pt-3 p-decerption">تطوير الموقع
-              </li>
-              <li class="pt-3 p-decerption">إضافة المحتوى
-
-              </li>
-              <li class="pt-3 p-decerption"> اختبار وتحسين
-
-              </li>
-              <li class="pt-3 p-decerption"> نشر الموقع
-
-              </li>
-              <li class="pt-3 p-decerption"> الصيانة والتحديث
-
-              </li>
-            </ul>
-            
-          </div>
-          <div class="col">
+          </h2>
+          <div class="col-md-8 m-auto pt-4">
             <img class="w-100 img-system" src="./assets/img/web-invo.png" alt="management">
           </div>
           
         </div>
+        <!--18-12-->
       </div>
      </section>
      <!---->
