--- a/about.html
+++ b/about.html
@@ -107,16 +107,12 @@
                   شركة رايتو للبرمجيات هي شركة تقنية رائدة تقدم منتجات وخدمات عالية الجودة لعملائها في جميع أنحاء العالم، تلتزم الشركة بالابتكار والتميز التقني، وتهدف لمساعدة عملائها على تحقيق أهدافهم، كما تمتلك الشركة فريقًا موهوبًا من المتخصصين في تطوير البرمجيات وتصميم الواجهات وإدارة المشاريع، وتستخدم الشركة أحدث التقنيات والأدوات لتطوير حلول برمجية مبتكرة ومخصصة تلبي متطلبات السوق الحالية والمستقبلية.
                  </p>
                </div>
+               <!--18-12-->
                <div class="col component-video" data-aos="fade-up"data-aos-delay="50">
                 <div class="video-date">
-                  <div class="div-button">
-                      <div id="myBtn"></div>
-                  </div>
-                  <video  loop="" id="myVideo" poster="assets/img/advertisements.png" style="object-fit:cover;">
-                      <source src="./assets/img/video/vv.mp4" type="video/mp4">
-                  </video>
+                  <iframe width="420" height="345" src="https://www.youtube.com/embed/3ItuLq7eZgI?si=OLwA3PoOyhfk62g-" allowfullscreen=""></iframe>
               
-              </div>   
+                 </div>   
                </div>
            </div>
         </div>
