--- a/Blog.html
+++ b/Blog.html
@@ -115,9 +115,9 @@
                       <!--start-->
                         <div class="col col-serves aos-init aos-animate d-flex" data-aos="fade-up" data-aos-delay="20">
                           <div class="card card-blog">
-                              <a href="blog-defintion.html">
+                              <a href="blog-defintion-edit.html">
                                     <div class="img-blog-date">
-                                        <img class="blog-img" src="./assets/img/Blog.webp" alt="Blog">
+                                        <img class="blog-img" src="./assets/img/test_720.png" alt="Blog">
                                         <div class="date-time">
                                               <div class="number-time">25</div>
                                               <div>Sep</div>
@@ -149,7 +149,7 @@
                     <!--start-->
                     <div class="col col-serves aos-init aos-animate d-flex" data-aos="fade-up" data-aos-delay="20">
                       <div class="card card-blog">
-                          <a href="blog-defintion.html">
+                          <a href="blog-defintion-edit.html">
                                 <div class="img-blog-date">
                                     <img class="blog-img" src="./assets/img/Blog-design.webp" alt="Blog">
                                     <div class="date-time">
@@ -182,7 +182,7 @@
                     <!--start-->
                     <div class="col col-serves aos-init aos-animate d-flex"data-aos="fade-up"data-aos-delay="20">
                       <div class="card card-blog">
-                          <a href="blog-defintion.html">
+                          <a href="blog-defintion-edit.html">
                                 <div class="img-blog-date">
                                     <img class="blog-img" src="./assets/img/bolog3.webp" alt="Blog">
                                     <div class="date-time">
