--- a/blog-defintion-edit.html
+++ b/blog-defintion-edit.html
@@ -23,7 +23,7 @@
     <link href="./assets/css/style-new.css" rel="stylesheet">
 </head>
 
-<body>
+<body >
      <!-------------------------start-loading-pag------------------------->
      <div class="component-stert">
           <div class="component--intro status--loaded">
@@ -119,7 +119,7 @@
                           </div>
                           <div class="container pt-4"> <!--edit add- container-30-1-2024-->
                             <div class="row mx-0"><!--edit add- row-30-1-2024-->
-                              <div class="col-lg-9" ><!--edit add- col-lg-8-30-1-2024-->
+                              <div class="col-lg-9 col-row-defintion" ><!--edit add- col-lg-8-30-1-2024-->
                                 <div class="defintion-blog p-2">
                                   <h5 class="title-card text-center">محتوي المقالة</h5><!--edit add-h5 30-1-2024-->
                                   <ul class="toc_list px-4 pt-2">
