--- a/Programs-stores.html
+++ b/Programs-stores.html
@@ -110,7 +110,7 @@
               <h2 class="title-title">  
                 نبذة عن برنامج إدارة المخزون 
               </h2>
-              <p class="pt-3 p-decerption">
+              <p class="pt-3 p-decerption-p">
                 تستطيع من خلال البرنامج إجراء عمليات إدارة دورة حياة المنتج، وتقديم كافة البيانات و التقارير الإحصائية المتعلقة به، بالإضافة إلى متابعة تحركات المخزون، متابعة حركة الاصناف - المرتجعات و تصنيفها سليم أو هالك، ويمكنك متابعة أرصدة العملاء والموردين ، تحويل المنتجات بين المخازن و بعضها، بالإضافة إلى ضبط التخزين بناء على تواريخ الصلاحية الاقدم إنتاجا ثم الأحدث ً تجنبًا لركود المنتج وتعرضه للتلف وغيرها من الخدمات.
               </p>
             </div>
