--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active"></div>
+            <div class="carousel-item active">
               <div class="img-slider">
                 <img src="./assets/img/hadeer-top.png" class="d-block w-100" alt="slider">
                 <div class="overlay"></div>
