--- a/index.html
+++ b/index.html
@@ -183,9 +183,11 @@
 
           </div>
           <div class="carousel-inner">
+                      <!--عروض اليوم الوطنى-->
+
             <div class="carousel-item active">
               <div class="img-slider">
-                <img src="./assets/img/hadeer-top.png" class="d-block w-100" alt="slider">
+                <img src="./assets/img/hadeer-top.jpg" class="d-block w-100" alt="slider">
                 <div class="overlay"></div>
               </div>
               
@@ -193,11 +195,12 @@
                 <h5>رايتو</h5>
                 <p class="pt-md-5 pt-1">للبرمجيات وتخطيط الموارد</p>
                 <div class="mt-md-5 mt-1">
-                  <a href="#" class="p-3 px-4 button-stert button-mor"> عروض اليوم الوطنى</a>
+                  <a href="Offers.html" class="p-3 px-4 button-stert button-mor"> عروض اليوم الوطنى</a>
   
                  </div>
               </div>
             </div>
+            <!---->
             <div class="carousel-item">
               <div class="img-slider">
                 <img src="./assets/img/sliderb.png" class="d-block w-100" alt="slider">
