--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
       color: var(--bs-dropdown-link-hover-color);
       background-color: var(--bs-dropdown-link-hover-bg);
   }
+  .overlay{
+    background-color: #00000087;
+  }
       </style>
 </head>
 <body>
