--- a/Offers.html
+++ b/Offers.html
@@ -111,6 +111,12 @@
         transition: all 1s;
         border-radius: 8px;
       }
+      @media (max-width: 990px) {
+    .img-slider img {
+        object-fit: cover;
+        object-position: 14%;
+    }
+}
     </style>
   </head>
   <body>
