--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
             <div class="carousel-item active">
               <div class="fullscreen-video-wrap">
-                <video  muted loop autoplay>
+                <video  muted loop autoplay playsinline>
                   <source src="./assets/img/video/final 4.mp4" type="video/mp4">
                 </video>
               </div>
