--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
                     <li><a class="dropdown-item" href="Programs-Personnel.html">  برنامج ادارة الموارد البشرية  </a></li>
                     <li><a class="dropdown-item" href="Programs-pos.html">  برنامج   نقاط البيعpos  </a></li>
                     <li><a class="dropdown-item" href="Programs-Other.html">     برامج اخرى  </a></li>
-  
+                    <li><a class="dropdown-item" href="Programs-Asset-system.html">    برنامج ادارة الاصول </a></li>
+                    <li><a class="dropdown-item" href="Programs-Asset-system-tow.html">    برنامج ادارة الاصول </a></li>
+
                   </ul>
                 </li>
                 <li class="nav-item">
